syntax = "proto3";

option csharp_namespace = "server_grpc";

// The greeting service definition.
service GetPersonById {
  // Sends a greeting
  rpc GetPerson (PersonRequest) returns (PersonResponse);
}

// The request message containing the user's name.
message PersonRequest {
  int32 id = 1;
}

// The response message containing the greetings.
message PersonResponse {
  int32 id = 1;
  string first_name = 2;
  string second_name = 3;
  int32 age = 4;
  string error = 5;
}
